# prysm

./: CLAUDE.md  Cargo.toml
capturers/v4l-capturer/: Cargo.toml  video_test.sh
capturers/v4l-capturer/src/: capture.rs  lib.rs  main.rs
prysm/: Cargo.toml
prysm-capture/: Cargo.toml  video_test.sh
prysm-capture/examples/: capture_smoke.rs
prysm-capture/src/: lib.rs  linux.rs  macos.rs  yuyv.rs
prysm-core/: Cargo.toml
prysm-core/src/: color.rs  config.rs  frame.rs  lib.rs  linear.rs  spectrum.rs
prysm-processor/: Cargo.toml
prysm-processor/examples/: bench.rs
prysm-processor/src/: algorithm.rs  color.rs  lib.rs  pixel_reader.rs  post_processor.rs
prysm-processor/src/algorithms/: edge_sampling.rs  mod.rs
prysm-processor/src/frames/: color_frame.rs  mod.rs  raw_frame.rs  view_frame.rs
prysm-processor/src/nodes/: band_detector.rs  change_detector.rs  edge_sampler.rs  mod.rs  pixel_decoder.rs  temporal_smoothing.rs
prysm-processor/src/pipeline/: node.rs
prysm-processor/src/pixel_readers/: mod.rs  rgb24.rs  yuyv.rs
prysm-processor/src/post_processors/: chain.rs  mod.rs  temporal_smoothing.rs
prysm-render/: Cargo.toml
prysm-render/src/: lib.rs
prysm/src/: ctrl_c.rs  main.rs  stream.rs
renderers/desktop-renderer/: Cargo.toml
renderers/desktop-renderer/src/: lib.rs
renderers/led-renderer/: Cargo.toml
