[workspace]
resolver = "3"
members = ["prysm", "prysm-capture", "prysm-core", "prysm-processor", "prysm-render", "renderers/desktop-renderer", "renderers/led-renderer", "capturers/v4l-capturer"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[workspace.dependencies]
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
anyhow = { version = "1.0" }
futures = { version = "0.3.31" }
async-stream = { version = "0.3" }