[package]
name = "prysm-processor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
async-stream.workspace = true
prysm-capture = { path = "../prysm-capture" }
prysm-render = {path = "../prysm-render"}
prysm-core = { path = "../prysm-core" }
