[package]
name = "prysm-processor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
async-stream.workspace = true
image.workspace = true
yuv = { workspace = true, features = ["fast_mode"] }
prysm-capture = { path = "../prysm-capture" }
prysm-core = { path = "../prysm-core" }
