[package]
name = "prysm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
prysm-capture = { path = "../prysm-capture" }
prysm-core = { path = "../prysm-core" }
prysm-processor = { path = "../prysm-processor" }
v4l-capturer = { path = "../capturers/v4l-capturer" }
desktop-renderer = { path = "../renderers/desktop-renderer" }
tokio-util.workspace = true
