[package]
name = "v4l-capturer"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
v4l = { version = "0.14.0", features = [] }
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
async-stream.workspace = true
prysm-capture = { path = "../../prysm-capture" }