[package]
name = "v4l-capturer"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
v4l = { git = "https://github.com/raymanfx/libv4l-rs.git", rev = "30f6dbaeed5cdb1b33760fc5b35c1b545cfe0e46", features = [] }
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
prysm-capture = { path = "../../prysm-capture" }
