[package]
name = "desktop-renderer"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
async-stream.workspace = true
prysm-render = { path = "../../prysm-render" }
prysm-capture = { path = "../../prysm-capture" }
tokio-stream = { workspace = true }

# Desktop renderer dependencies
eframe = "0.33"
egui = "0.33"
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }