[package]
name = "desktop-renderer"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
prysm-capture = { path = "../../prysm-capture" }
prysm-core = { path = "../../prysm-core" }

# Desktop renderer dependencies
eframe = "0.33"
egui = "0.33"
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tokio-util.workspace = true
